WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
181210
Invalidate current element style on class change accurately
https://bugs.webkit.org/show_bug.cgi?id=181210
Summary
Invalidate current element style on class change accurately
Antti Koivisto
Reported
2018-01-02 04:35:36 PST
We currently do accurate invalidation for descendants but always invalidate the element itself as long as there are any rules that mention the class. We should do this with rulesets too.
Attachments
patch
(24.68 KB, patch)
2018-01-02 06:28 PST
,
Antti Koivisto
ews-watchlist
: commit-queue-
Details
Formatted Diff
Diff
Archive of layout-test-results from ews102 for mac-elcapitan
(2.26 MB, application/zip)
2018-01-02 07:26 PST
,
EWS Watchlist
no flags
Details
Archive of layout-test-results from ews105 for mac-elcapitan-wk2
(2.76 MB, application/zip)
2018-01-02 07:38 PST
,
EWS Watchlist
no flags
Details
Archive of layout-test-results from ews116 for mac-elcapitan
(3.07 MB, application/zip)
2018-01-02 07:51 PST
,
EWS Watchlist
no flags
Details
patch
(25.27 KB, patch)
2018-01-02 08:05 PST
,
Antti Koivisto
no flags
Details
Formatted Diff
Diff
Show Obsolete
(4)
View All
Add attachment
proposed patch, testcase, etc.
Antti Koivisto
Comment 1
2018-01-02 06:28:17 PST
Created
attachment 330312
[details]
patch
EWS Watchlist
Comment 2
2018-01-02 07:26:51 PST
Comment on
attachment 330312
[details]
patch
Attachment 330312
[details]
did not pass mac-ews (mac): Output:
http://webkit-queues.webkit.org/results/5893217
New failing tests: fast/shadow-dom/shadow-host-with-before-after.html fast/shadow-dom/css-scoping-slotted-invalidation.html fast/shadow-dom/css-scoping-slot-flex.html fast/shadow-dom/shadow-host-style-update.html
EWS Watchlist
Comment 3
2018-01-02 07:26:52 PST
Created
attachment 330314
[details]
Archive of layout-test-results from ews102 for mac-elcapitan The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: ews102 Port: mac-elcapitan Platform: Mac OS X 10.11.6
EWS Watchlist
Comment 4
2018-01-02 07:38:08 PST
Comment on
attachment 330312
[details]
patch
Attachment 330312
[details]
did not pass mac-wk2-ews (mac-wk2): Output:
http://webkit-queues.webkit.org/results/5893227
New failing tests: fast/shadow-dom/shadow-host-with-before-after.html fast/shadow-dom/css-scoping-slotted-invalidation.html fast/shadow-dom/css-scoping-slot-flex.html
EWS Watchlist
Comment 5
2018-01-02 07:38:09 PST
Created
attachment 330315
[details]
Archive of layout-test-results from ews105 for mac-elcapitan-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: ews105 Port: mac-elcapitan-wk2 Platform: Mac OS X 10.11.6
EWS Watchlist
Comment 6
2018-01-02 07:51:21 PST
Comment on
attachment 330312
[details]
patch
Attachment 330312
[details]
did not pass mac-debug-ews (mac): Output:
http://webkit-queues.webkit.org/results/5893231
New failing tests: fast/shadow-dom/shadow-host-with-before-after.html
EWS Watchlist
Comment 7
2018-01-02 07:51:22 PST
Created
attachment 330316
[details]
Archive of layout-test-results from ews116 for mac-elcapitan The attached test failures were seen while running run-webkit-tests on the mac-debug-ews. Bot: ews116 Port: mac-elcapitan Platform: Mac OS X 10.11.6
Antti Koivisto
Comment 8
2018-01-02 08:05:44 PST
Created
attachment 330317
[details]
patch
WebKit Commit Bot
Comment 9
2018-01-10 01:01:58 PST
Comment on
attachment 330317
[details]
patch Clearing flags on attachment: 330317 Committed
r226703
: <
https://trac.webkit.org/changeset/226703
>
WebKit Commit Bot
Comment 10
2018-01-10 01:02:00 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 11
2018-01-10 01:03:26 PST
<
rdar://problem/36401057
>
Ryan Haddad
Comment 12
2018-01-10 08:43:30 PST
This change broke the Windows build. Here is the error from the bots, which matches what win-ews reported before the change was landed: c:\cygwin\home\buildbot\slave\win-release\build\source\webcore\css\rulefeature.cpp(68): error C2220: warning treated as error - no 'object' file generated [C:\cygwin\home\buildbot\slave\win-release\build\WebKitBuild\Release\Source\WebCore\WebCore.vcxproj] c:\cygwin\home\buildbot\slave\win-release\build\source\webcore\css\rulefeature.cpp(68): warning C4715: 'WebCore::RuleFeatureSet::computeNextMatchElement': not all control paths return a value [C:\cygwin\home\buildbot\slave\win-release\build\WebKitBuild\Release\Source\WebCore\WebCore.vcxproj] UnifiedSource211.cpp
https://build.webkit.org/builders/Apple%20Win%20Release%20%28Build%29/builds/6974
Antti Koivisto
Comment 13
2018-01-10 09:02:09 PST
https://trac.webkit.org/r226718
might help
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug